<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/zk1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:id="@+id/name_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/pwd_login"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/pwd" />

        <TextView
            android:id="@+id/zhuce_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ljzc"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="150dp"
            android:textColor="#E51C23" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="30dp"
            android:background="#E51C23"
            android:text="@string/login_button"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>